Support build configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,10 @@ steps:
 
 - template: templates/build.yml
   parameters:
+    buildConfiguration: 'Debug'
+
+- template: templates/build.yml
+  parameters:
     buildConfiguration: 'Release'
 
 - task: PublishBuildArtifacts@1
